Fix Tweet word-wrap

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 #tweets-container #handle {
@@ -65,6 +66,7 @@
   width: 98%;
   margin: 0;
   padding: .5rem;
+  overflow-wrap: break-word;
 }
 
 #tweets-container footer {
